--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
-NODE_ENV=development
-NETLIFY_URL=http://localhost:3000
-REMOTE_SERVER=http://localhost:4000
-SESSION_SECRET=super secret session phrase
-MONGO_CONNECTION_STRING=mongodb://127.0.0.1:27017/rayan
-
-# NODE_ENV=production
-# NETLIFY_URL=https://a6--kanbas-react-web-app-rayan.netlify.app
-# REMOTE_SERVER=kanbas-node-server-app-1-26hk.onrender.com
+# NODE_ENV=development
+# NETLIFY_URL=http://localhost:3000
+# REMOTE_SERVER=http://localhost:4000
 # SESSION_SECRET=super secret session phrase
-# MONGO_CONNECTION_STRING=mongodb+srv://rayan:supersecretpassword@kanbas.aybd5.mongodb.net/kanbas?retryWrites=true&w=majority&appName=Kanbas
+# MONGO_CONNECTION_STRING=mongodb://127.0.0.1:27017/rayan
+
+NODE_ENV=production
+NETLIFY_URL=https://rayanhassanweb.netlify.app
+REMOTE_SERVER=rayan-personal-web-server.onrender.com
+SESSION_SECRET=super secret session phrase
+MONGO_CONNECTION_STRING=mongodb+srv://rayanpersonalwebsite:Him@nyLococyte1@rayan.deq26.mongodb.net/rayan?retryWrites=true&w=majority&appName=Rayan
+
+# mongodb+srv://rayan:supersecretpassword@kanbas.aybd5.mongodb.net/rayan?retryWrites=true&w=majority&appName=Kanbas
+
+
