--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ NODE_ENV=production
 NETLIFY_URL=https://rayanhassanweb.netlify.app
 REMOTE_SERVER=rayan-personal-web-server.onrender.com
 SESSION_SECRET=super secret session phrase
-MONGO_CONNECTION_STRING=mongodb+srv://rayanpersonalwebsite:Him@nyLococyte1@rayan.deq26.mongodb.net/rayan?retryWrites=true&w=majority&appName=Rayan
+MONGO_CONNECTION_STRING=mongodb+srv://rayanpersonalwebsite:Him%40nyLococyte1@rayan.deq26.mongodb.net/rayan?retryWrites=true&w=majority&appName=Rayan
 
 # mongodb+srv://rayan:supersecretpassword@kanbas.aybd5.mongodb.net/rayan?retryWrites=true&w=majority&appName=Kanbas
 
