--- a/.env
+++ b/.env
@@ -8,8 +8,11 @@ NODE_ENV=production
 NETLIFY_URL=https://rayanhassanweb.netlify.app
 REMOTE_SERVER=rayan-personal-web-server.onrender.com
 SESSION_SECRET=super secret session phrase
-MONGO_CONNECTION_STRING=mongodb+srv://rayanpersonalwebsite:rayoz123@rayan.deq26.mongodb.net/rayan?retryWrites=true&w=majority&appName=Rayan
+MONGO_CONNECTION_STRING=mongodb+srv://rayan:rayoz123@rayan.deq26.mongodb.net/rayan?retryWrites=true&w=majority&appName=Rayan
+# mongodb+srv://rayanpersonalwebsite:rayoz123@rayan.deq26.mongodb.net/rayan?retryWrites=true&w=majority&appName=Rayan
 
 # mongodb+srv://rayan:supersecretpassword@kanbas.aybd5.mongodb.net/rayan?retryWrites=true&w=majority&appName=Kanbas
+
+
 
 
